--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,27 @@
-<p>
-  header works!
-</p>
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="assets/images/dog.png" class="d-inline-block align-top" alt="">
+    </a>
+    <span class="navbar-text">
+      <h5>JUNIORMASCARENHAS</h5><br>
+      Developer, Geek and Passionate about Technology
+    </span>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        Social media icons here
+      </span>
+    </div>
+  </nav>
+</div>
