--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,26 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img src="assets/images/dog.png" class="d-inline-block align-top" alt="">
-    </a>
-    <span class="navbar-text">
-      <h5>JUNIORMASCARENHAS</h5><br>
-      Developer, Geek and Passionate about Technology
-    </span>
-    <div class="collapse navbar-collapse" id="navbarText">
+    <div class="col-img">
+      <a class="navbar-brand" routerLink="/home">
+        <img src="assets/images/dog.png" class="d-inline-block align-top" alt="">
+      </a>
+    </div>
+    <div class="col-md-5 float-left collapse navbar-collapse">
+      <h5>JUNIORMASCARENHAS</h5>
+      <div class="navbar-desc">
+        <p>Developer, Geek and Passionate about Technology</p>
+      </div>
+    </div>
+    <div class="col-md-4 float-left collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" routerLink="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" routerLink="/blog">Blog</a>
         </li>
       </ul>
       <span class="navbar-text">
