orking on footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,38 @@
-<p>
+<div class="card text-center">
+  <div class="card-body">
+    <h5 class="card-title">
+      <span style="text-decoration:none;"><a href="https://juniormascarenhas.wixsite.com/website" target="_self">juniormascarenhas</a></span>
+    </h5>
+    <a class="auto-generated-link" data-auto-recognition="true" data-content="juniorug@gmail.com" href="mailto:juniorug@gmail.com" data-type="mail">juniorug@gmail.com</a>
+    <p class="card-text">+55 (71) 988672086</p>
+    <div class="social-media">
+      <a class="nav-link" target="_blank" href="https://linkedin.com/in/edivaldo-mascarenhas-045a9479/">
+        <i class="fa fa-linkedin"></i>
+      </a>
+      <a class="nav-link" target="_blank" href="https://github.com/juniorug">
+        <i class="fa fa-github"></i>
+      </a>
+      <a class="nav-link" target="_blank" href="https://twitter.com/juniormfj">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a class="nav-link" target="_blank" href="https://plus.google.com/108664534208975507204">
+        <i class="fa fa-google-plus"></i>
+      </a>
+      <a class="nav-link" target="_blank" href="https://www.facebook.com/junior.mascarenhas.58">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a class="nav-link" target="_blank" href="https://www.flickr.com/people/133274604@N04/">
+        <i class="fa fa-circle"></i><i class="fa fa-circle"></i>
+      </a>
+    </div>
+  </div>
+  <div class="card-footer text-muted">
+    ©2018 by juniormascarenhas.com
+  </div>
+</div>
+
+
+<!-- <p>
   footer works!
 </p>
 <div class="jumbotron">
@@ -48,4 +82,4 @@
         </ng-template>
       </ngb-tab>
     </ngb-tabset>
-</div>
+</div> -->
