creating home's child components

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -24,6 +24,10 @@ h5 {
 .fa-circle{
     font: normal normal normal 12px/1 FontAwesome;
 }
+.card-title {
+    margin-bottom: 25px;
+}
 .card-footer.text-muted{
     background-color: #eaf5f7;
+    border-top: 0px;
 }
