--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,3 +17,9 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<images-carousel></images-carousel>
+<impact-phrase-area></impact-phrase-area>
+<contact-form></contact-form>
+<google-map></google-map>
+<blog-preview></blog-preview>
+<subscribe-form></subscribe-form>
