--- a/src/app/home/blog-preview/blog-preview.component.html
+++ b/src/app/home/blog-preview/blog-preview.component.html
@@ -1,3 +1,19 @@
-<p>
-  blog-preview works!
-</p>
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <h5>Welcome to LibsensorPy!</h5>
+        <p>May 8, 2017</p>
+        <img class="img-responsive" src="../assets/images/libsensorPy.png" alt="libsensorPy"> 
+      </div>
+      <div class="col">
+        <h5>Inspiração e organização</h5>
+        <p>May 10, 2018</p>
+        <img class="img-responsive" src="../assets/images/inspiracao.png" alt="libsensorPy"> 
+      </div>
+      <div class="col">
+        <h5>Sua dose diária de design</h5>
+        <p>Jan 15, 2019</p>
+        <img class="img-responsive" src="../assets/images/dose.png" alt="libsensorPy"> 
+      </div>
+    </div>
+</div>
