--- a/src/app/home/blog-preview/blog-preview.component.scss
+++ b/src/app/home/blog-preview/blog-preview.component.scss
@@ -3,6 +3,9 @@
         max-width: 1000px;
     }
 }
+.container {
+    margin-top: 100px;
+}
 h5 {
     font: normal normal normal 18px/1.75em raleway,sans-serif;
     color: #000000;
@@ -10,7 +13,6 @@ h5 {
     line-height: normal;
     letter-spacing: normal;
 }
-
 p {
     font-style: italic;
     /* font: normal normal normal 15px/1.875em raleway,sans-serif; */
