--- a/src/app/home/google-map/google-map.component.html
+++ b/src/app/home/google-map/google-map.component.html
@@ -1,3 +1,10 @@
-<p>
-  google-map works!
-</p>
+<agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng" [styles]="styles" [fullscreenControl]='true' [mapTypeControl]='true'>
+  <agm-marker [latitude]="lat" [longitude]="lng">
+    <agm-snazzy-info-window [isOpen]="true" [backgroundColor]="white" [placement]="top"  [maxWidth]="300" [closeWhenOthersOpen]="true" 
+    [latitude]="lat" [longitude]="lng">
+      <ng-template>
+        {{label}}
+      </ng-template>
+    </agm-snazzy-info-window>
+  </agm-marker>
+</agm-map>
