adding impact and contact form

--- a/src/app/home/contact-form/contact-form.component.html
+++ b/src/app/home/contact-form/contact-form.component.html
@@ -1,3 +1,63 @@
-<p>
-  contact-form works!
-</p>
+<div class="bg-blue">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>CONTACT US</h1>
+        <p>Salvador, BA, Brazil</p>
+        <p>juniorug@gmail.com</p>
+        <p>+55 (71) 988672086</p>
+        <div class="social-media">
+          <a class="nav-link" target="_blank" href="https://linkedin.com/in/edivaldo-mascarenhas-045a9479/">
+            <i class="fa fa-linkedin"></i>
+          </a>
+          <a class="nav-link" target="_blank" href="https://github.com/juniorug">
+            <i class="fa fa-github"></i>
+          </a>
+          <a class="nav-link" target="_blank" href="https://twitter.com/juniormfj">
+            <i class="fa fa-twitter"></i>
+          </a>
+          <a class="nav-link" target="_blank" href="https://plus.google.com/108664534208975507204">
+            <i class="fa fa-google-plus"></i>
+          </a>
+          <a class="nav-link" target="_blank" href="https://www.facebook.com/junior.mascarenhas.58">
+            <i class="fa fa-facebook"></i>
+          </a>
+          <a class="nav-link" target="_blank" href="https://www.flickr.com/people/133274604@N04/">
+            <i class="fa fa-circle"></i><i class="fa fa-circle"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <form>
+          <div class="form-group">
+            <div class="col-md-6" style="padding-right: 8px;">
+              <input type="text" class="form-control" id="name" placeholder="Name" required>
+            </div>
+            <div class="col-md-6" style="padding-left: 8px;">
+              <input type="text" class="form-control" id="email" placeholder="Email" required>
+            </div>
+          </div>
+     
+          <div class="form-group">
+            <input type="text" class="form-control" id="subject" placeholder="Subject" required>
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" id="phone" placeholder="Phone" required>
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" id="address" placeholder="Address" >
+          </div>
+
+          <div class="form-group">
+            <textarea class="form-control" id="message" placeholder="Message" required></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-success">Send</button>
+     
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
