--- a/src/app/home/impact-phrase-area/impact-phrase-area.component.html
+++ b/src/app/home/impact-phrase-area/impact-phrase-area.component.html
@@ -1,3 +1,18 @@
-<p>
-  impact-phrase-area works!
-</p>
+<div class="bg-aqua">
+  <div class="container">
+    <div class="row">
+      <div class="col parent">
+        <div class="child">
+          <p>
+            "Intelligence is the ability to adapt to change."
+          </p>
+          <h3>- Stephen Hawking</h3>
+        </div>
+      </div>
+      <div class="col">
+          <img class="img-responsive" src="../assets/images/ideas.png" alt="ideas">
+          <div class="background-black"></div>
+      </div>
+    </div>
+  </div>
+</div>
