--- a/src/app/home/blog-preview/blog-preview.component.html
+++ b/src/app/home/blog-preview/blog-preview.component.html
@@ -8,12 +8,12 @@
       <div class="col">
         <h5>Inspiração e organização</h5>
         <p>May 10, 2018</p>
-        <img class="img-responsive" src="../assets/images/inspiracao.png" alt="libsensorPy"> 
+        <img class="img-responsive" src="../assets/images/inspiracao.png" alt="inspiração"> 
       </div>
       <div class="col">
         <h5>Sua dose diária de design</h5>
         <p>Jan 15, 2019</p>
-        <img class="img-responsive" src="../assets/images/dose.png" alt="libsensorPy"> 
+        <img class="img-responsive" src="../assets/images/dose.png" alt="dose"> 
       </div>
     </div>
 </div>
