--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <!-- REMOVER O BG-LIGHT -->
     <a class="navbar-brand" routerLink="/home">
       <img src="assets/images/dog.png" alt="juniormascarenhas.com">
@@ -17,6 +17,7 @@
         <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" routerLink="/about">About</a>
         <a class="nav-link" routerLink="/blog">Blog</a>
+        <a class="nav-link" routerLink="/blog">Portfolio</a>
         <div class="social-media float-left">
           <a class="nav-link" target="_blank" href="https://linkedin.com/in/edivaldo-mascarenhas-045a9479/">
             <i class="fa fa-linkedin"></i>
