--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,70 @@
-<p>
-  about works!
-</p>
+<!-- /*PROFILE*/ -->
+<div class="bg-aqua">
+  <div class="row">
+    <div class="col">
+        <img class="img-responsive" src="../assets/images/profile.png" alt="inspiração"> 
+    </div>
+    <div class="col parent">
+      <div class="child">
+        <h1>PROFILE</h1>
+        <h6>An Entire life of criativity</h6>
+        <p>
+            Since the beginning of my career I have been focused on directing 
+            my talent and creativity to achieve effective and meaningful results. 
+            I am proud of what I do and of the solid partnerships I have built 
+            with clients and co-workers. I strongly believe in working together 
+            in an arduous and humorous way throughout the process. If you are 
+            interested in learning more about me or my work, please let me know.
+        </p>
+        <!-- <form action="mailto:juniorug@gmail.com" method="GET">
+            <input type="submit" value="Send" />
+        </form> -->
+        <!-- <button onclick="location.href='mailto:juniorug@gmail.com';">Contact Us</button> -->
+        <div class="bt_contact_div">
+          <a href="mailto:juniorug@gmail.com" target="_self" data-content="juniorug@gmail.com" data-type="mail" role="button" 
+            id="comp-jiguey8plink" class="bt_contact">
+            <span id="comp-jiguey8plabel" class="style-jil3zzi5label">Contact Us</span>
+          </a>
+        </div>
+      </div>  
+    </div>
+  </div>
+</div>
+
+<!-- /* CAREER SUMMARY*/ -->
+<div class="bg-blue">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+          <h1>CAREER SUMMARY:</h1>
+          <p>Five years of experience as software engineer developing and maintaining web and telecom applications. 
+            Graduated in system analysis and development. Postgraduated(specialization) in Ubiquitous and Distributed Computing.
+            One year of experience as computer science exchange student at City College of San Francisco – CA.<br><br>
+            Rich domain knowledge and comprehensive understanding of several Software and designing tools.
+            Proven technical and analytical skills, with sound understanding and skill of creating new software and systems, 
+            designing, analysis, testing, database development and coding for modules to meet customers specific needs.
+            Technical proficiency in a high paced production environment.
+            An effective team player with exceptional planning and execution skills coupled with a systematic approach 
+            and quick adaptability.<br><br>
+            Author of LibsensorPy project, an extensible open source python library, which allows the user to interact with 
+            environment through sensors and actuators coupled to the Raspberry Pi as well as add new sensors/actuators 
+            and easy way to practice, thereby strengthening the use of free hardware, aiming to solve problems of a physical nature.<br> 
+            (See http://libsensorpy.com/ for more details).
+          </p>
+          <h3>TECHNICAL SKILL SET:</h3>
+          <p> 
+            <strong>Languages:</strong> Java, PHP, Ruby, Python , Objective C, Unix Shell scripting, XML.<br>
+            <strong>Front-end technologies:</strong> HTML5, CSS3, Javascript, Angular, Bootstrap.<br>
+            <strong>Version Manager:</strong> CVS, SVN, GIT.<br>
+            <strong>Frameworks, technologies:</strong> Spring, JSF, JSP, HIbernate, Struts, Primefaces, Stripes, SymfonyPHP, Django, Ruby on Rails.<br>
+            <strong>Operating Systems:</strong> UNIX-based (Linux), MS-DOS, Microsoft Windows , OS X, Android, iOS, Embedded Systems.<br>
+            <strong>Platforms:</strong> Desktop, Mobile, Web.<br>
+            <strong>Database:</strong> MySQL, Oracle, Postgres, SQLite.<br>
+            <strong>Web/App servers:</strong> Apache Tomcat, JBoss EAP, Weblogic.<br>
+            <strong>Linux-based development boards/Microcomputers (Embedded Systems):</strong> Arduino, Raspberry Pi , Beaglebone Black.
+          </p>
+      </div>
+    </div>
+  </div>
+</div>
+       
