--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -31,8 +31,9 @@ h5 {
     background-color: #eaf5f7;
     border-top: 0px;
 }
-
 .card {
     border: 0px;
-
+}
+.card-body {
+    padding-top: 50px;
 }
