blog first post

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,23 @@
-<p>
-  blog works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <h2>Welcome to LibsensorPy!</h2>
+        <div class="date-and-owner">
+          <div class="date">
+              <p><em>May 8, 2016 | Júnior Mascarenhas</em></p>
+          </div>
+        </div>
+        <p>
+          LibsensorPy is an extensible open source python library, which allows the user to interact with environment through sensors and
+          actuators coupled to the Raspberry Pi as well as add new sensors/actuators and easy way to practice, thereby strengthening the use 
+          of free ha...
+        </p>
+        <img class="img-responsive" src="../../assets/images/blog01.png" alt="inspiração"> 
+        <div class="bt_contact_div">
+          <a href="#" target="_self" role="button" class="bt_contact">
+            <span id="comp-jiguey8plabel" class="style-jil3zzi5label">Read More</span>
+          </a>
+        </div>
+    </div>
+  </div>
+</div>
