--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main container">
   <div class="row">
     <div class="col">
         <h2>Welcome to LibsensorPy!</h2>
@@ -20,4 +20,80 @@
         </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+        <h2>Inspiração e organização: como trabalhar melhor ao longo do dia</h2>
+        <div class="date-and-owner">
+          <div class="date">
+              <p><em>May 8, 2016 | Júnior Mascarenhas</em></p>
+          </div>
+        </div>
+        <p>
+            Este é o seu post no blog. Os blogs são uma ótima maneira de criar uma conexão com seu público e mantê-lo interessado. São 
+            também uma excelente forma de você se posicionar como referência em sua área. Para editar seu conteúdo, basta clicar aqui para 
+            abrir o Blog Manage...
+        </p>
+        <img class="img-responsive" src="../../assets/images/blog02.png" alt="inspiração"> 
+        <div class="bt_contact_div">
+          <a href="#" target="_self" role="button" class="bt_contact">
+            <span id="comp-jiguey8plabel" class="style-jil3zzi5label">Read More</span>
+          </a>
+        </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+        <h2>Sua dose diária de design</h2>
+        <div class="date-and-owner">
+          <div class="date">
+              <p><em>May 8, 2016 | Júnior Mascarenhas</em></p>
+          </div>
+        </div>
+        <p>
+          Este é o seu post no blog. Os blogs são uma ótima maneira de criar uma conexão com seu público e mantê-lo interessado. São 
+          também uma excelente forma de você se posicionar como referência em sua área. Para editar seu conteúdo, basta clicar aqui para 
+          abrir o Blog Manage...
+        </p>
+        <img class="img-responsive" src="../../assets/images/blog03.png" alt="inspiração"> 
+        <div class="bt_contact_div">
+          <a href="#" target="_self" role="button" class="bt_contact">
+            <span id="comp-jiguey8plabel" class="style-jil3zzi5label">Read More</span>
+          </a>
+        </div>
+    </div>
+  </div>
+</div>
+<div class="container recent">
+  <h4>Our Recent Posts</h4>
+  <div class="row" style="padding-top: 0px;">
+    <div class="col">
+      <img class="img-responsive" src="../assets/images/libsensorPy.png" alt="libsensorPy">
+      <h5>Welcome to LibsensorPy!</h5>
+      <p>May 8, 2017</p>
+    </div>
+    <div class="col">
+      <img class="img-responsive" src="../assets/images/inspiracao.png" alt="inspiração"> 
+      <h5>Inspiração e organização</h5>
+      <p>May 10, 2018</p>
+    </div>
+    <div class="col">
+      <img class="img-responsive" src="../assets/images/dose.png" alt="dose"> 
+      <h5>Sua dose diária de design</h5>
+      <p>Jan 15, 2019</p>
+    </div>
+  </div>
+  <div class="row">
+    <h4>Tags</h4>
+  </div> 
+  <div class="row"style="padding-top: 0px;">
+      <p>Design gráfico
+          Dicas e segredos
+          Escritório
+          Inspiração
+          LibsensorPy
+          Organização
+          Python        
+          Raspberry Pi
+      </p>
+    </div> 
 </div>
