--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,6 +1,10 @@
 .container {
     text-align: center;
     width: 80%;
+    margin-top: 0px;
+}
+.row {
+    padding-top: 70px;
 }
 h2 {
     line-height:1.2em;
@@ -8,7 +12,6 @@ h2 {
     font: normal normal normal 22px/1.41em raleway,sans-serif;
     color: #000000;
 }
-
 .date-and-owner {
     position: relative;
     -webkit-box-orient: horizontal;
@@ -40,8 +43,6 @@ img {
     width: 100%;
     margin-bottom: 25px;
 }
-
-
 .bt_contact_div {
     border-radius: 0;
     background-color: rgba(0, 56, 98, 1);
@@ -64,7 +65,6 @@ img {
     align-items: center;
     height: 100%;
 }
-
 .bt_contact_div[data-disabled="false"]:hover[data-state~="desktop"] .bt_contact {
     background-color: rgba(0, 56, 98, 0.6);
     border-color: rgba(0, 0, 0, 1);
@@ -72,7 +72,6 @@ img {
 a:hover {
     text-decoration: none;
 }
-
 .style-jil3zzi5label {
     font: normal normal normal 15px/1.875em raleway,sans-serif;
     transition: color 0.4s ease 0s;
@@ -82,31 +81,42 @@ a:hover {
     position: relative;
     white-space: nowrap;
 }
-/* 
-.subscribe-button {
-    -webkit-flex: 0 1 auto;
-    -ms-flex: 0 1 auto;
-    flex: 0 1 auto;
-    border-radius: 0;
-    background-color: rgba(0,0,0,1) !important;
-    border-color: rgba(0,0,0,1);
-    border-width: 0.4918032786885246px;
-    color: rgba(255,255,255,1);
-    font: normal normal normal 15px/1.875em raleway,sans-serif;
+/* recent posts */
+
+.container.recent{
+    padding-top: 40px;
+}
+.recent h5 {
+    font: normal normal normal 18px/1.75em raleway,sans-serif;
+    color: #000000;
+    margin-bottom: 0px;
+    line-height: normal;
+    letter-spacing: normal;
+}
+.recent p {
+    font-style: italic;
+    /* font: normal normal normal 15px/1.875em raleway,sans-serif; */
+    font-size: 13px;
+    color: #000000;
     margin: 0;
-    padding: 9px 24px;
-    border-style: solid;
-    -webkit-appearance: none;
-    white-space: nowrap;
-    cursor: pointer;
-    width: 100%;
-    margin-top: -15px;
+    margin-bottom: 10px;
 }
 
-.subscribe-button {
-    background-color: rgba(0,0,0,1) !important;
-    border-color: rgba(0,0,0,1);
-    border-width: 0.4918032786885246px;
-    color: rgba(255,255,255,1) !important;
-    font: normal normal normal 15px/1.875em raleway,sans-serif;
-} */
+.recent img {
+    vertical-align: middle;
+    float: left;
+    width: 300px;
+    height: 249px;
+}
+h4 {
+    font: normal normal normal 18px/1.75em raleway,sans-serif;
+    color: #000000;
+    text-align: left;
+}
+.container.recent h5,
+.container.recent p {
+    text-align: left;
+}
+.container.recent img {
+    margin-bottom: 15px;
+}
