adding blogs content

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
         <img class="img-responsive" src="../assets/images/profile.png" alt="inspiração"> 
     </div>
     <div class="col parent">
-      <div class="child">
+      <div class="child" data-scroll-reveal="enter right and move 50px over 2s">
         <h1>PROFILE</h1>
         <h6>An Entire life of criativity</h6>
         <p>
