--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -12,9 +12,9 @@
           actuators coupled to the Raspberry Pi as well as add new sensors/actuators and easy way to practice, thereby strengthening the use 
           of free ha...
         </p>
-        <img class="img-responsive" src="../../assets/images/blog01.png" alt="inspiração"> 
+        <img class="img-responsive" src="../../assets/images/blog01.png" alt="libsensorPy" routerLink="/blog/libsensorpy"> 
         <div class="bt_contact_div">
-          <a href="#" target="_self" role="button" class="bt_contact">
+          <a routerLink="/blog/libsensorpy" target="_self" role="button" class="bt_contact">
             <span id="comp-jiguey8plabel" class="style-jil3zzi5label">Read More</span>
           </a>
         </div>
@@ -29,13 +29,13 @@
           </div>
         </div>
         <p>
-            Este é o seu post no blog. Os blogs são uma ótima maneira de criar uma conexão com seu público e mantê-lo interessado. São 
-            também uma excelente forma de você se posicionar como referência em sua área. Para editar seu conteúdo, basta clicar aqui para 
-            abrir o Blog Manage...
+          Este é o seu post no blog. Os blogs são uma ótima maneira de criar uma conexão com seu público e mantê-lo interessado. São 
+          também uma excelente forma de você se posicionar como referência em sua área. Para editar seu conteúdo, basta clicar aqui para 
+          abrir o Blog Manage...
         </p>
-        <img class="img-responsive" src="../../assets/images/blog02.png" alt="inspiração"> 
+        <img class="img-responsive" src="../../assets/images/blog02.png" alt="inspiração" routerLink="/blog/inspiracao"> 
         <div class="bt_contact_div">
-          <a href="#" target="_self" role="button" class="bt_contact">
+          <a routerLink="/blog/inspiracao" target="_self" role="button" class="bt_contact">
             <span id="comp-jiguey8plabel" class="style-jil3zzi5label">Read More</span>
           </a>
         </div>
@@ -54,9 +54,9 @@
           também uma excelente forma de você se posicionar como referência em sua área. Para editar seu conteúdo, basta clicar aqui para 
           abrir o Blog Manage...
         </p>
-        <img class="img-responsive" src="../../assets/images/blog03.png" alt="inspiração"> 
+        <img class="img-responsive" src="../../assets/images/blog03.png" alt="dose" routerLink="/blog/dose"> 
         <div class="bt_contact_div">
-          <a href="#" target="_self" role="button" class="bt_contact">
+          <a outerLink="/blog/dose" target="_self" role="button" class="bt_contact">
             <span id="comp-jiguey8plabel" class="style-jil3zzi5label">Read More</span>
           </a>
         </div>
