--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" routerLink="/about">About</a>
         <a class="nav-link" routerLink="/blog">Blog</a>
-        <a class="nav-link" routerLink="/blog">Portfolio</a>
+        <a class="nav-link" routerLink="/portfolio">Portfolio</a>
         <div class="social-media float-left">
           <a class="nav-link" target="_blank" href="https://linkedin.com/in/edivaldo-mascarenhas-045a9479/">
             <i class="fa fa-linkedin"></i>
