--- a/src/app/home/impact-phrase-area/impact-phrase-area.component.html
+++ b/src/app/home/impact-phrase-area/impact-phrase-area.component.html
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col parent">
         <div class="child">
-          <p>
+          <p data-scroll-reveal="enter left and move 50px over 2s">
             "Intelligence is the ability to adapt to change."
           </p>
-          <h3>- Stephen Hawking</h3>
+          <h3 data-scroll-reveal="enter bottom and move 50px over 4s">- Stephen Hawking</h3>
         </div>
       </div>
       <div class="col">
