--- a/src/app/home/blog-preview/blog-preview.component.html
+++ b/src/app/home/blog-preview/blog-preview.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="row">
-      <div class="col">
-        <h5>Welcome to LibsensorPy!</h5>
+      <div class="col" routerLink="/blog/libsensorpy">
+        <h5>Welcome to LibsensorPy!2</h5>
         <p>May 8, 2017</p>
         <img class="img-responsive" src="../assets/images/libsensorPy.png" alt="libsensorPy"> 
       </div>
-      <div class="col">
+      <div class="col" routerLink="/blog/inspiracao">
         <h5>Inspiração e organização</h5>
         <p>May 10, 2018</p>
         <img class="img-responsive" src="../assets/images/inspiracao.png" alt="inspiração"> 
       </div>
-      <div class="col">
+      <div class="col" routerLink="/blog/dose">
         <h5>Sua dose diária de design</h5>
         <p>Jan 15, 2019</p>
         <img class="img-responsive" src="../assets/images/dose.png" alt="dose"> 
