--- a/src/app/home/images-carousel/images-carousel.component.html
+++ b/src/app/home/images-carousel/images-carousel.component.html
@@ -2,22 +2,22 @@
     <ng-template ngbSlide>
       <img [src]="images[0]" alt="Random first slide">
       <div class="carousel-caption">
-        <h3>First slide label</h3>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <h3>Om mani padme hum</h3>
+        <p>six-syllabled Sanskrit mantra particularly associated with the four-armed Shadakshari form of Avalokiteshvara.</p>
       </div>
     </ng-template>
     <ng-template ngbSlide>
       <img [src]="images[1]" alt="Random second slide">
       <div class="carousel-caption">
-        <h3>Second slide label</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h3>Junior Mascarenhas</h3>
+        <p>Developer, Geek and Passionate about Technology</p>
       </div>
     </ng-template>
     <ng-template ngbSlide>
       <img [src]="images[2]" alt="Random third slide">
       <div class="carousel-caption">
-        <h3>Third slide label</h3>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <h3>Suae quisque fortuna faber est.</h3>
+        <p>Sapientiam autem non vincit malitia.</p>
       </div>
     </ng-template>
   </ngb-carousel>
