--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,10 @@
 .navbar-light {
     background-color: #fff;
 }
+.is-active {
+    color: #003862;
+    font-weight: 600;
+}
 h5 {
     font: normal normal normal 22px/1.41em raleway, sans-serif;
     color: #000;
