--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,10 +14,10 @@
     </button>
     <div class="collapse navbar-collapse float-right" id="navbarNavAltMarkup" [ngbCollapse]="isCollapsed">
       <div class="navbar-nav ml-auto">
-        <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" routerLink="/about">About</a>
-        <a class="nav-link" routerLink="/blog">Blog</a>
-        <a class="nav-link" routerLink="/portfolio">Portfolio</a>
+        <a class="nav-link" routerLink="/home" [routerLinkActive]="'is-active'">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/about" [routerLinkActive]="'is-active'">About</a>
+        <a class="nav-link" routerLink="/blog" [routerLinkActive]="'is-active'">Blog</a>
+        <a class="nav-link" routerLink="/portfolio" [routerLinkActive]="'is-active'">Portfolio</a>
         <div class="social-media float-left">
           <a class="nav-link" target="_blank" href="https://linkedin.com/in/edivaldo-mascarenhas-045a9479/">
             <i class="fa fa-linkedin"></i>
