--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -66,17 +66,17 @@
 <div class="container recent">
   <h4>Our Recent Posts</h4>
   <div class="row" style="padding-top: 0px;">
-    <div class="col">
+    <div class="col" routerLink="/blog/libsensorpy">
       <img class="img-responsive" src="../assets/images/libsensorPy.png" alt="libsensorPy">
       <h5>Welcome to LibsensorPy!</h5>
       <p>May 8, 2017</p>
     </div>
-    <div class="col">
+    <div class="col" routerLink="/blog/inspiracao">
       <img class="img-responsive" src="../assets/images/inspiracao.png" alt="inspiração"> 
       <h5>Inspiração e organização</h5>
       <p>May 10, 2018</p>
     </div>
-    <div class="col">
+    <div class="col" routerLink="/blog/dose">
       <img class="img-responsive" src="../assets/images/dose.png" alt="dose"> 
       <h5>Sua dose diária de design</h5>
       <p>Jan 15, 2019</p>
