--- a/src/app/blog/dose/dose.component.scss
+++ b/src/app/blog/dose/dose.component.scss
@@ -123,3 +123,10 @@ h4 {
 .container.recent .col {
     cursor: pointer;
 }
+.row.fb {
+    padding-top: 15px;
+    text-align: left;
+}
+.row.fb .col {
+    padding-left: 0px;
+}
