--- a/src/app/blog/libsensorpy/libsensorpy.component.html
+++ b/src/app/blog/libsensorpy/libsensorpy.component.html
@@ -54,14 +54,20 @@
     <h4>Tags</h4>
   </div> 
   <div class="row"style="padding-top: 0px;">
-      <p>Design gráfico
-          Dicas e segredos
-          Escritório
-          Inspiração
-          LibsensorPy
-          Organização
-          Python        
-          Raspberry Pi
-      </p>
-    </div> 
+    <p>Design gráfico
+        Dicas e segredos
+        Escritório
+        Inspiração
+        LibsensorPy
+        Organização
+        Python        
+        Raspberry Pi
+    </p>
+  </div>
+<!--   <div class="fb-comments" data-href="http://juniormascarenhas.com/blog/libsensorpy" data-numposts="5"></div> -->
+  <div class="row fb">
+    <div class="col">
+      <div class="fb-comments" data-href="http://localhost:4200/blog/libsensorpy" data-numposts="5"></div>
+    </div>
+  </div>
 </div>
