adding features fb

--- a/src/app/blog/dose/dose.component.html
+++ b/src/app/blog/dose/dose.component.html
@@ -57,7 +57,7 @@
   <!--   <div class="fb-comments" data-href="http://juniormascarenhas.com/blog/dose" data-numposts="5"></div> -->
   <div class="row fb">
     <div class="col">
-      <div class="fb-comments" data-href="http://localhost:4200/blog/dose" data-numposts="5"></div>
+      <div class="fb-comments" href="http://juniormascarenhas.com/blog/dose" numposts="5"></div>
     </div>
   </div> 
 </div>
