--- a/src/app/blog/inspiracao/inspiracao.component.html
+++ b/src/app/blog/inspiracao/inspiracao.component.html
@@ -55,9 +55,9 @@
     </p>
   </div> 
   <!--   <div class="fb-comments" data-href="http://juniormascarenhas.com/blog/inspiracao" data-numposts="5"></div> -->
-  <div class="row fb">
+  <div class="row fb pastel">
     <div class="col">
-      <div class="fb-comments" data-href="http://localhost:4200/blog/inspiracao" data-numposts="5"></div>
+      <div class="fb-comments" data-href="http://juniormascarenhas.com/blog/inspiracao" data-numposts="5"></div>
     </div>
   </div> 
 </div>
