--- a/src/app/blog/libsensorpy/libsensorpy.component.html
+++ b/src/app/blog/libsensorpy/libsensorpy.component.html
@@ -65,9 +65,10 @@
     </p>
   </div>
 <!--   <div class="fb-comments" data-href="http://juniormascarenhas.com/blog/libsensorpy" data-numposts="5"></div> -->
+<!-- <div class="fb-comments" data-href="http://localhost:4200/blog/libsensorpy" data-numposts="5"></div> -->
   <div class="row fb">
     <div class="col">
-      <div class="fb-comments" data-href="http://localhost:4200/blog/libsensorpy" data-numposts="5"></div>
+      <div class="fb-comments" data-href="http://juniormascarenhas.com/blog/libsensorpy" data-numposts="5"></div>
     </div>
   </div>
 </div>
