--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,3 +1,14 @@
-<p>
-  portfolio works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>International projects (@DaterraWeb)</h2>
+      <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <h2>National projects (Personal)</h2>
+      <ngx-gallery [options]="myGalleryOptions" [images]="myGalleryImages"></ngx-gallery>
+    </div>
+  </div>
+</div>
